# rs-google-play

./: Cargo.toml
googleplay-protobuf/: Cargo.toml
googleplay-protobuf/protos/: GooglePlay.proto  README.md
googleplay-protobuf/src/: googleplay.rs
gpapi/: Cargo.toml  README.md  README.tpl  build.rs  device.properties
gpapi/src/: device_properties.rs  lib.rs
gpapi/src/snippets/: device_properties.rs
