[package]
name = "gpapi"
version = "6.0.3"
authors = ["Bill Budington <bill@eff.org>"]
build = "build.rs"
license = "MIT"
edition = "2021"
description = "A library for interacting with the Google Play API"
homepage = "https://github.com/EFForg/rs-google-play/tree/master/gpapi"
repository = "https://github.com/EFForg/rs-google-play/tree/master/gpapi"

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
prost = "0.14"
reqwest = "0.13"
bytes = "1"
googleplay-protobuf = "3"
bincode = "2"
futures = "0.3"
tokio-dl-stream-to-disk = "1"
serde = { version = "1", features = ["derive"] }
configparser = "3"

[build-dependencies]
googleplay-protobuf = "3"
prost = "0.14"
bincode = "2"
configparser = "3"
serde = { version = "1", features = ["derive"] }
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
